# aws-socks

./: .gitignore  CODEBASE_STRUCTURE.md  CODING_GUIDELINES.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: README.md  _coverpage.md  _sidebar.md  changelog.md  contributing.md  index.html  roadmap.md  usage.md
docs/usage_docs/: athena.md  cloudwatch.md  dynamodb.md  lambda.md  s3.md  secrets_manager.md  sqs.md  ssm.md  sts.md
socks/: __init__.py  athena.py  aws_lambda.py  cloudwatch.py  dynamodb.py  s3.py  secretsmanager.py  sqs.py  ssm.py  sts.py
tests/: test_athena.py  test_aws_lambda.py  test_cloudwatch.py  test_dynamodb.py  test_s3.py  test_secretsmanager.py  test_sqs.py  test_ssm.py  test_sts.py
